--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ version '1.0-SNAPSHOT'
 
 sourceCompatibility = 11
 
+// кодировка файлов (если используете русский язык в файлах)
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
 
@@ -15,16 +16,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.jetbrains:annotations:20.1.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
     testImplementation 'com.codeborne:selenide:6.17.2'
 
 
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.18.1'
-    testImplementation 'io.github.bonigarcia:webdrivermanager:5.7.0'
 }
 
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+
 }
